--- a/Mi primer página web.html
+++ b/Mi primer página web.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html>
+
   <head>
 
     <title>Name</title>
     <!-- Name: Work in progress -->
 
-<link rel="stylesheet" href="style.css" type="text/css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 
   </head>
 
 <body>
 
-<div id="page">
-      <div id="logo">
+  <div class="page" id="page">
+      <div class="logo" id="logo">
 
-<h1> * Name * </h1>
-
+        <strong><h1> * Name * </h1></strong>
+<hr>
       </div>
-        <div id="nav">
-
+        <div class="nav" id="nav1">
 
   <ul>
-    <li>Inicio</li>
-    <li>Acerca de nosotros</li>
-    <li>Menu</li>
-    <li>Servicios</li>
-    <li>Contacto</li>
+    <li><a href="#Inicio"><strong>Inicio</strong></a></li>
+    <li><a href="#Acerca de"><strong>Acerca de</strong></a></li>
+    <li><a href="#Menu"><strong>Menu</strong></a></li>
+    <li><a href="#Servicios"><strong>Servicios</strong></a></li>
+    <li><a href="#Contacto"><strong>Contacto</strong></a></li>
+
   </ul>
 
-      <div id="content">
+<hr>
+        </div>
 
-
+      <div class="content" id="content">
+        <section>
+        <p> Restaurante para aquellos que disfrutan de el sabor...</p>
+        </section>
 
       </div>
 
-        </div>
-
-</div>
+  </div>
 
 </body>
 
