Update Mi primer página web.html

--- a/Mi primer página web.html
+++ b/Mi primer página web.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 
   <head>
@@ -19,13 +19,13 @@
 <hr>
       </div>
         <div class="nav" id="nav1">
-
-  <ul>
-    <li><a href="#Inicio"><strong>Inicio</strong></a></li>
-    <li><a href="#Acerca de"><strong>Acerca de</strong></a></li>
-    <li><a href="#Menu"><strong>Menu</strong></a></li>
-    <li><a href="#Servicios"><strong>Servicios</strong></a></li>
-    <li><a href="#Contacto"><strong>Contacto</strong></a></li>
+<center>
+          <button>Inicio</button>
+          <button>Acerca de</button>
+          <button>Menu</button>
+          <button>Servicios</button>
+          <button>Contacto</button>
+</center>
 
   </ul>
 
