--- a/Mi primer página web.html
+++ b/Mi primer página web.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html>
-
   <head>
 
     <title>Name</title>
@@ -12,11 +12,13 @@
 <body>
 
   <div class="page" id="page">
+
       <div class="logo" id="logo">
 
         <strong><h1> * Name * </h1></strong>
-<hr>
+
       </div>
+
         <div class="nav" id="nav1">
 <center>
           <button>Inicio</button>
@@ -26,12 +28,10 @@
           <button>Contacto</button>
 </center>
 
-  </ul>
-
-<hr>
         </div>
 
       <div class="content" id="content">
+
         <section>
         <p> Restaurante para aquellos que disfrutan de el sabor...</p>
         </section>
@@ -40,6 +40,5 @@
 
   </div>
 
-</body>
-
+  </body>
 </html>
