--- a/Home.html
+++ b/Home.html
@@ -2,52 +2,31 @@
 <html>
 <head>
   <title>Alkymia Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body>
-<div class="page" id="page">
-
-  <div class="logo" id="page">
-
+  <body>
+    <strong><h1> Alkymia </h1></strong>
+      <!-- Name: Alquimia -->
   </div>
-
-    <div class="name" id="name">
-      <strong><h1> Alkymia </h1></strong>
-        <!-- Name: Alquimia -->
-
+    <div class="nav1" id="nav home">
+      <a href="Home.html"><button>Inicio</button></a>
+        <a href="Menu.html"><button>Menu</button></a>
+          <a href="Gallery.html"><button>Galeria</button></a>
+            <a href="Contact.html"><button>Contacto</button></a>
+  </div>
+    <div class="description" id="description">
+      <p> Restaurante Alkymia le ofrece variedad de platillos fusion para disfrutar con familia, amigos o
+      pareja. Con destacados chefs a nivel nacional e internacional que le ofreceran a su paladar una
+      experiencia gastronomica unica.
+      </p>
+  </div>
+    <div class="footer " id="footer">
+      <footer>
+        <hr />
+          <p> Restaurante Alkymia
+          <p>La fusion del sabor</p>
+      </footer>
     </div>
-
-      <div class="nav1" id="nav home">
-        <center>
-          <a href="Home.html"><button>Inicio</button><a/>
-          <a href="Menu.html"><button>Menu</button><a/>
-          <a href="Gallery.html"><button>Galeria</button><a/>
-          <a href="Contact.html"><button>Contacto</button><a/>
-        </center>
-      </div>
-
-        <div class="content" id="content">
-          <section>
-            <p> Restaurante Alkymia le ofrece variedad de platillos fusion
-                y bebidas tanto para compartir en pareja como con su
-                familia.
-            </p>
-          </section>
-        </div>
-
-
-<div class="footer " id="footer">
-
-<footer>
-  <hr />
-  <center>
-    <p> Restaurante Alkymia
-    <p>Contact information: <a href="someone@example.com">someone@example.com</a>.</p>
-  </center>
-</footer>
-
-</div>
-
-</div>
-</body>
-</html>
+  </div>
+  </body>
+</html>>>>
