--- a/Contact.html
+++ b/Contact.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Menu</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+  <title>Alkymia Contacts</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-  <div class="page" id="page">
+<strong><h1> Alkymia </h1></strong>
+<!-- Name: Alquimia -->
+</div>
+<div class="nav1" id="nav home">
+    <a href="Home.html"><button>Inicio</button></a>
+      <a href="Menu.html"><button>Menu</button></a>
+        <a href="Gallery.html"><button>Galeria</button></a>
+          <a href="Contact.html"><button>Contacto</button></a>
+</div>
+<div class="content" id="content">
+  <section>
 
-    <div class="logo" id="page">
 
-    </div>
-
-      <div class="name" id="name">
-        <strong><h1> Alkymia </h1></strong>
-          <!-- Name: Alquimia -->
-
-      </div>
-
-        <div class="nav1" id="nav home">
-          <center>
-            <a href="Home.html"><button>Inicio</button><a/>
-            <a href="Menu.html"><button>Menu</button><a/>
-            <a href="Gallery.html"><button>Galeria</button><a/>
-            <a href="Contact.html"><button>Contacto</button><a/>
-          </center>
-        </div>
-
-  <div>
-
-  <div class="footer " id="footer">
-
+  </section>
+</div>
+<div class="footer " id="footer">
   <footer>
     <hr />
-    <center>
       <p> Restaurante Alkymia
-      <p>Contact information: <a href="someone@example.com">someone@example.com</a>.</p>
-    </center>
+      <p>La fusion del sabor</p>
   </footer>
-
-  </div>
-
-  </div>
-  </div>
-
+</div>
 </div>
 </body>
 </html>
