--- a/Menu.html
+++ b/Menu.html
@@ -1,52 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Menu</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+  <title>Alkymia Menu</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-  <div class="page" id="page">
+<strong><h1> Alkymia </h1></strong>
+<!-- Name: Alquimia -->
+</div>
+<div class="nav1" id="nav home">
+    <a href="Home.html"><button>Inicio</button></a>
+      <a href="Menu.html"><button>Menu</button></a>
+        <a href="Gallery.html"><button>Galeria</button></a>
+          <a href="Contact.html"><button>Contacto</button></a>
+</div>
+<div class="menu" id="menu">
+  <section>
 
-    <div class="logo" id="page">
-
-    </div>
-
-      <div class="name" id="name">
-        <strong><h1> Alkymia </h1></strong>
-          <!-- Name: Alquimia -->
-
+      <div class="Entrada">
+        <h2>Entrada</h2>
+        <ul style="list-style-type:none">
+            <li>Ensalada con salmon ahumado</li>
+            <li>Ensalada con queso fresco de cabra</li>
+            <li>Ensalada de pera rrellena de queso azul</li>
+            <li>Rissoto de setas y hongoss</li>
+            <li>Cardo con almejas en salsa verde</li>
+        </ul>
       </div>
 
-        <div class="nav1" id="nav home">
-          <center>
-            <a href="Home.html"><button>Inicio</button><a/>
-            <a href="Menu.html"><button>Menu</button><a/>
-            <a href="Gallery.html"><button>Galeria</button><a/>
-            <a href="Contact.html"><button>Contacto</button><a/>
-          </center>
-        </div>
+      <div class="Plato">
+          <h2>Platofuerte</h2>
+          <ul style="list-style-type:none">
+              <li>Salmon al horno con muselina de trufa</li>
+              <li>Corvina a la plancha con verduras</li>
+              <li>Rollito de ternera relleno de tocino y queso con champiñones</li>
+              <li>Dados de atun rojo con teriyaki</li>
+              <li>Wok de pavo con sesamo</li>
+          </ul>
+      </div>
 
-          <div class="platos" id="platos" >
-            <h2> Plato fuerte <h2/>
-          </div>
+      <div class="Postres">
+          <h2>Postres</h2>
+          <ul style="list-style-type:none">
+              <li>Yogurt natural de oveja artesano</li>
+              <li>Sorbete de limon al cava</li>
+              <li>Brownie de chocolate con nueces</li>
+              <li>Mousse</li>
+          </ul>
+      </div>
 
-  <div>
+      <div class="Bebidas">
+          <h2>Bebidas</h2>
+          <ul style="list-style-type:none">
+              <li>Pata negra verdejo(Botella 2 personas)</li>
+              <li>Jaume serra cava brut nature (Botella 2 personas)</li>
+              <li>Agua mineral</li>
+              <li>Refresco o Cerveza</li>
+          </ul>
+      </div>
 
-  <div class="footer " id="footer">
 
+  </section>
+</div>
+<div class="footer " id="footer">
   <footer>
     <hr />
-    <center>
       <p> Restaurante Alkymia
-      <p>Contact information: <a href="someone@example.com">someone@example.com</a>.</p>
-    </center>
+      <p>La fusion del sabor</p>
   </footer>
-
-  </div>
-
-  </div>
-  </div>
-
+</div>
 </div>
 </body>
-</html>
+</html>>
