--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
   <title>Alkymia Contacts</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
@@ -14,11 +14,12 @@
         <a href="Gallery.html"><button>Galeria</button></a>
           <a href="Contact.html"><button>Contacto</button></a>
 </div>
-<div class="content" id="content">
-  <section>
+  <div class="contacto" id="contacto">
+    <p>Visitenos en el Mall Avex, segunda planta contiguo a los cines 3D</p>
+    <p>Contactenos de 12 MD a 10PM</p>
+    <p>Telefono: 44-55-6666.</p>
 
 
-  </section>
 </div>
 <div class="footer " id="footer">
   <footer>
